# 202604_if_agent

./: .gitignore  Cargo.toml  README.md  eval.md
design/: 20260425_TUI.md  20260425_design.md  20260427_dfs.md  20260427_dfs_blocked_paths.md  20260427_dfs_descriptions.md
eval_data/: first_nodes.json
eval_gt/: map_gt_01.json
runner/: Cargo.toml  README.md  build.rs
runner/bocfel/include/: bocfel_embed.h
runner/bocfel/src/: bocfel_embed.cpp
runner/design/: 20260425_runner_specs.md  runner_specs.md
runner/src/: ffi.rs  lib.rs  main.rs
src/: main.rs
src/agent/: mod.rs
src/config/: app.rs  mod.rs
src/game/: clean.rs  mod.rs  session.rs  transcript.rs  validation.rs
src/llm/: client.rs  mod.rs  prompt.rs  schema.rs
src/logging/: mod.rs
src/memory/: mod.rs  world.rs
src/planner/: mod.rs
src/tui/: mod.rs
